--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rapier Group Marketing Consultancy, based in Pershore, UK">
+    <meta name="keywords" content="marketing consultant, clive pearson, pershore, worcestershire">
     <!--CREDIT: Favicon https://favicon.io/-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">  
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rapier Group | Clive Pearson</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Rapier Group</h1>
+        </a>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#">Planning</a></li>
+                <li><a href="#">Tactics</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
     <nav>
