add html structure to index.html and reference main image in readme.md

--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
             </ul>
         </nav>
     </header>
+
+    <main>
         <div id="main-image"></div>
+        <!--Main headline over image, needs styling-->
+        <h2>We are Rapier Marketing</h2>
+        <h2>We want to help you grow your business</h2>
+        <!--Needs buttons to take you further down the homepage Past Projects and Services-->
+        <h3>We work with you to streamline your marketing.</h3>
+    </main>
+
+    <section>Text</section>
+    <section>What we do - 2 boxes</section>
+    <section>Past Projects</section>
+    <section>Testimonials</section>
+
+    <footer>Contact and Connect</footer>
 
 </body>
 </html>
