--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
     </header>
 
     <main>
-        <div id="main-image"></div>
+        <div id="hero-image-home"></div>
         <!--Main headline over image, needs styling-->
         <h2>We are Rapier Marketing</h2>
-        <h2>We want to help you grow your business</h2>
+        <h2>Helping you grow your business</h2>
         <!--Needs buttons to take you further down the homepage Past Projects and Services-->
         <h3>We work with you to streamline your marketing.</h3>
     </main>
 
     <section>Text</section>
-    <section>What we do - 2 boxes</section>
+    <section>What we do - 3 boxes</section>
     <section>Past Projects</section>
     <section>Testimonials</section>
 
