move hero-image-home below nav bar

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
     </header>
 
     <main>
-        <div id="hero-image-home"></div>
+        <div id="hero-image-outer">
+            <div id="hero-image-home"></div>
         <!--Main headline over image, needs styling-->
-        <h2>We are Rapier Marketing</h2>
-        <h2>Helping you grow your business</h2>
+            <h2>We are Rapier Marketing</h2>
+            <h2>Helping you grow your business</h2>
         <!--Needs buttons to take you further down the homepage Past Projects and Services-->
-        <h3>We work with you to streamline your marketing.</h3>
+            <h3>We work with you to streamline your marketing.</h3>
+        </div>
     </main>
 
     <section>Text</section>
