centre cover-headlines over hero-image

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <div id="hero-image-outer">
             <div id="hero-image-home"></div>
         <!--Main headline over image, needs styling-->
-            <h2>We are Rapier Marketing</h2>
-            <h2>Helping you grow your business</h2>
+            <div id="cover-headlines">
+                <h2>We are Rapier Marketing</h2>
+                <h2>Helping you grow your business</h2>
+            </div>
         <!--Needs buttons to take you further down the homepage Past Projects and Services-->
             <h3>We work with you to streamline your marketing.</h3>
         </div>
