style #cover-headlines-subtitle

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <h2>Helping you grow your business</h2>
             </div>
         <!--Needs buttons to take you further down the homepage Past Projects and Services-->
-            <h3>We work with you to streamline your marketing.</h3>
+            <div id="cover-headlines-subtitle">   
+                <h3>Transforming your marketing</h3>
+            </div> 
         </div>
     </main>
 
