--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
         </div>
     </main>
 
-    <section>Text</section>
+    <section>
+        <div id="text-container">
+            <h2>We combine traditional tactics and digital activity to create a marketing strategy to grow your business and increase your ROI.</h2>
+            <br>
+            <p>We specialise in providing outsourced marketing solutions for SME organisations. We help you develop and implement a highly targeted marketing plan that is specifically created for your business.</p>
+            <br>
+            <p>We ensure maximum return is achieved from your marketing expenditure. We measure and monitor all activity to ensure campaign targets and objectives are met.  We are passionate about growing your business with you!</p>
+        </div>
+    </section>
+
     <section>What we do - 3 boxes</section>
     <section>Past Projects</section>
     <section>Testimonials</section>
