add and basic styling of about-us section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
         </div>
     </section>
 
-    <section>What we do - 3 boxes</section>
+    <section>
+        <div id="about-us">
+            <div id="left-box">Left Box</div>
+            <div id="centre-box">Centre Box</div>
+            <div id="right-box">Right Box</div>
+        </div>
+    </section>
+
     <section>Past Projects</section>
     <section>Testimonials</section>
 
