--- a/index.html
+++ b/index.html
@@ -72,7 +72,23 @@
     </section>
 
     <section>Past Projects</section>
-    <section>Testimonials</section>
+    
+    <section>        
+        <div id="testimonials">
+            <div id="left-box">
+                <h3>Experience</h3>
+                <p>With over 25 years experience across multiple B2B sectors, including, manufacturing, engineering, industrial, plastics and packaging in the UK, Europe and internationally we have the knowledge and expertise to grow and develop your business.</p>
+            </div>
+            <div id="centre-box-1">
+                <h3>Marketing Plans</h3>
+                <p>We work with you to develop strategic and engaging marketing plans to enabling you to specifically target customer and potential customer groups, partners and stakeholders. Enquiry generation, improved conversion and increased ROI is our speciality.</p>
+            </div>
+            <div id="right-box">
+                <h3>Involvement</h3>
+                <p>We work with you to understand your organisation, it’s mission, objectives and focus, to create specific and targeted marketing plans, with a highly relevant mix of tactics to secure your organisation's future growth and expansion.</p>
+            </div>
+        </div>
+    </section>
 
     <footer>Contact and Connect</footer>
 
