add initial div for past-projects section on index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
         </div>
     </section>
 
-    <section>Past Projects</section>
+    <section>
+        <div id="past-projects">
+            <h2>Past Projects</h2>
+        </div>
+    </section>
     
     <section>        
         <div id="testimonials">
