--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <section>
         <div id="about-us">
+            <div id=centre-text>
                 <div id="left-box">
                     <i class="fas fa-globe fa-3x"></i>
                     <h3>Experience</h3>
@@ -71,6 +72,7 @@
                     <h3>Involvement</h3>
                     <p>We work with you to understand your organisation, it’s mission, objectives and focus, to create specific and targeted marketing plans, with a highly relevant mix of tactics to secure your organisation's future growth and expansion.</p>
                 </div>
+            </div>
         </div>
     </section>
 
