add photos to past projects section and initial styling

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
     <section>
         <div id="past-projects">
             <h2>Past Projects</h2>
+            <div id="image-box-left">
+                <img src="assets/images/automated_exhibition_1.JPG" alt="A crowded exhibition booth for Automated Packaging Systems" class="project-image"></a>
+            </div>
+            <div id="image-box-right">
+                <img src="assets/images/egberttaylor_exhibition_1.jpeg" alt="An exhibition booth for Egbert Taylor" class="project-image"></a>
+            </div>
         </div>
     </section>
     
