add titles in the footer

--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@
         </div>
     </section>
 
-    <footer>Contact and Connect</footer>
+    <footer>
+        
+        <div id="infobox-content-1">
+            <h3 class="title">Contact</h3>
+        </div>
+
+        <div id="infobox-content-2">
+            <h3 class="title">Connect</h3>
+        </div>
+
+    </footer>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/b3341ec0dd.js" crossorigin="anonymous"></script>
