add social media font awesome icons to footer

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="footer">
         
         <div id="infobox-content-1">
             <h3 class="title">Contact</h3>
@@ -183,6 +183,9 @@
 
         <div id="infobox-content-2">
             <h3 class="title">Connect</h3>
+            <i class="fab fa-linkedin"><a target="_blank" href="https://www.linkedin.com/company/rapier-group"></a></i>
+            <i class="fab fa-twitter"><a target="_blank" href="https://twitter.com/RapierMarketing"></a></i>
+            <i class="fab fa-facebook"><a target="_blank" href="https://www.facebook.com/Rapier-Marketing-102795364837812"></a></i>
         </div>
 
     </footer>
