--- a/index.html
+++ b/index.html
@@ -178,14 +178,21 @@
     <footer class="footer">
         
         <div id="infobox-content-1">
-            <h3 class="title">Contact</h3>
+            <h3 class="title-left">Contact</h3>
         </div>
 
         <div id="infobox-content-2">
-            <h3 class="title">Connect</h3>
+            <h3 class="title-right">Connect</h3>
+        </div>
+                
+        <div id="social-media-icons">
             <i class="fab fa-linkedin"><a target="_blank" href="https://www.linkedin.com/company/rapier-group"></a></i>
             <i class="fab fa-twitter"><a target="_blank" href="https://twitter.com/RapierMarketing"></a></i>
             <i class="fab fa-facebook"><a target="_blank" href="https://www.facebook.com/Rapier-Marketing-102795364837812"></a></i>
+        </div>
+
+        <div id="contact-info">
+            <p>Call Clive Pearson on 07725 323393</p>
         </div>
 
     </footer>
