--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
     <main>
         <div id="hero-image-outer">
             <div id="hero-image-home"></div>
-        <!--Main headline over image, needs styling-->
-            <div id="cover-headlines">
-                <h2>We are Rapier Marketing</h2>
-                <h2>Helping you grow your business</h2>
-            </div>
+            <div id="cover-headlines-outer">   
+                <div id="cover-headlines">
+                    <h2>We are Rapier Marketing</h2>
+                    <h2>Helping you grow your business</h2>
+                </div>
+            </div>    
         <!--Needs buttons to take you further down the homepage Past Projects and Testimonials-->
             <div id="cover-headlines-subtitle">   
                 <h3>Transforming your marketing</h3>
@@ -55,6 +56,8 @@
     </section>
 
     <section>
+        <div id="past-projects">
+            <h2>About Us</h2>
         <div id="about-us">
             <div id=centre-text>
                 <div id="left-box">
