restyle boxes, footers and social media links

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
         </div>
                 
         <div id="social-media-icons">
-            <i class="fab fa-linkedin"><a target="_blank" href="https://www.linkedin.com/company/rapier-group"></a></i>
-            <i class="fab fa-twitter"><a target="_blank" href="https://twitter.com/RapierMarketing"></a></i>
-            <i class="fab fa-facebook"><a target="_blank" href="https://www.facebook.com/Rapier-Marketing-102795364837812"></a></i>
+            <a href="https://www.linkedin.com/company/rapier-group" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/RapierMarketing" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
 
         <div id="contact-info">
