further footer styling to match nav bar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <section>
-        <div id="past-projects">
+        <div id="section-title">
             <h2>What we do</h2>
         <div id="about-us">
             <div id=centre-text>
@@ -77,7 +77,7 @@
     </section>
 
     <section>
-        <div id="past-projects">
+        <div id="section-title">
             <h2>Past Projects</h2>
             <div class="responsive">
                 <div class="gallery">
@@ -158,13 +158,15 @@
         </div>
     </section>
     
-    <section>        
+    <section>
+      <div id="section-title">
+        <h2>Testimonials</h2>        
         <div id="testimonials">
             <div id="left-box">
                 <h3>Experience</h3>
                 <p>With over 25 years experience across multiple B2B sectors, including, manufacturing, engineering, industrial, plastics and packaging in the UK, Europe and internationally we have the knowledge and expertise to grow and develop your business.</p>
             </div>
-            <div id="centre-box-1">
+            <div id="centre-box">
                 <h3>Marketing Plans</h3>
                 <p>We work with you to develop strategic and engaging marketing plans to enabling you to specifically target customer and potential customer groups, partners and stakeholders. Enquiry generation, improved conversion and increased ROI is our speciality.</p>
             </div>
@@ -173,6 +175,7 @@
                 <p>We work with you to understand your organisation, it’s mission, objectives and focus, to create specific and targeted marketing plans, with a highly relevant mix of tactics to secure your organisation's future growth and expansion.</p>
             </div>
         </div>
+      </div>
     </section>
 
     <footer class="footer">
