add text for testimonials

--- a/index.html
+++ b/index.html
@@ -163,16 +163,19 @@
         <h2>Testimonials</h2>        
         <div id="testimonials">
             <div id="left-box">
-                <h3>Experience</h3>
-                <p>With over 25 years experience across multiple B2B sectors, including, manufacturing, engineering, industrial, plastics and packaging in the UK, Europe and internationally we have the knowledge and expertise to grow and develop your business.</p>
+                <h3>David Snowden</h3>
+                <h4>Business Analyst</h4>
+                <p>Clive was one of our most knowledgeable people when delivering IT and technical services to exhibitors.  He is an intelligent and professional manager of both work and people with a thorough-going commercial instinct and skillset.  If you want to make money then Clive will be invaluable.  Just give him the challenge!</p>
             </div>
             <div id="centre-box">
-                <h3>Marketing Plans</h3>
-                <p>We work with you to develop strategic and engaging marketing plans to enabling you to specifically target customer and potential customer groups, partners and stakeholders. Enquiry generation, improved conversion and increased ROI is our speciality.</p>
+                <h3>Lynne Greenfeather</h3>
+                <h4>Marketing Consultant</h4>
+                <p>Clive is a consummate professional and very versed in the field of marketing communications. He is never short of new and creative ideas that produce solid results. It has been my pleasure working with Clive.</p>
             </div>
             <div id="right-box">
-                <h3>Involvement</h3>
-                <p>We work with you to understand your organisation, it’s mission, objectives and focus, to create specific and targeted marketing plans, with a highly relevant mix of tactics to secure your organisation's future growth and expansion.</p>
+                <h3>Jens Pfeiffer</h3>
+                <h4>General Manager</h4>
+                <p>Clive is a communications and marketing specialist with additional good skills in German language. He is methodical, dedicated to his work and a great supporter. The whole German team appreciated working with him.</p>
             </div>
         </div>
       </div>
