put testimoniaol images in their containers

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <h3>Jens Pfeiffer</h3>
                 <h4>General Manager</h4>
                 <div id="circle-container">
-                  <div id="circle-cover-bg"></div>
+                  <div id="circle-cover-bg-right"></div>
               </div>
                 <p>Clive is a communications and marketing specialist with additional good skills in German language. He is methodical, dedicated to his work and a great supporter. The whole German team appreciated working with him.</p>
             </div>
