add aria-labels to social media links

--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
         </div>
                 
         <div id="social-media-icons">
-            <a href="https://www.linkedin.com/company/rapier-group" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/RapierMarketing" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener" aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><i class="fab fa-facebook"></i></a>
         </div>
 
         <div id="contact-info">
