--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div id="circle-container">
                   <div id="circle-cover-bg-left"></div>
               </div>
-                <p>Clive was one of our most knowledgeable people when delivering IT and technical services to exhibitors.  He is an intelligent and professional manager of both work and people with a thorough-going commercial instinct and skillset.  If you want to make money then Clive will be invaluable.  Just give him the challenge!</p>
+                <p>Clive was one of our most knowledgeable people when delivering IT and technical services to exhibitors.  He is an intelligent and professional manager of both work and people with a thorough-going commercial instinct and skillset.  If you want to make money then Clive will be invaluable.</p>
             </div>
             <div id="centre-box">
                 <h3>Lynne Greenfeather</h3>
