--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <section>
-        <div id="section-title">
+        <div class="section-title">
             <h2>What we do</h2>
         <div id="about-us">
             <div id=centre-text>
@@ -77,7 +77,7 @@
     </section>
 
     <section>
-        <div id="section-title">
+        <div class="section-title">
             <h2>Past Projects</h2>
             <div class="responsive">
                 <div class="gallery">
@@ -153,13 +153,11 @@
                 </div>
               </div>
               <div class="clearfix"></div>
-            
-
         </div>
     </section>
     
     <section>
-      <div id="section-title">
+      <div class="section-title">
         <h2>Testimonials</h2>        
         <div id="testimonials">
             <div id="left-box">
