--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <nav>
                 <ul id="menu">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="#">Planning</a></li>
-                    <li><a href="#">Tactics</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="planning.html">Planning</a></li>
+                    <li><a href="tactics.html">Tactics</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
