add correct images and quotes to planning.html and tactics.html

--- a/tactics.html
+++ b/tactics.html
@@ -30,12 +30,11 @@
     </header>
 
     <main>
-        <div id="hero-image-outer">
-            <div id="hero-image-home"></div>
-            <div id="cover-headlines-outer">   
-                <div id="cover-headlines">
-                    <h2>We are Rapier Marketing</h2>
-                    <h2>Helping you grow your business</h2>
+        <div id="tactics-hero-image-outer">
+            <div id="tactics-hero-image-home"></div>
+            <div id="tactics-cover-headlines-outer">   
+                <div id="tactics-cover-headlines">
+                    <h2>“The aim of marketing is to know and understand the customer so well the product or service fits him and sells itself.” ~ Peter F. Drucker</h2>
                 </div>
             </div>    
         <!--Needs buttons to take you further down the homepage Past Projects and Testimonials-->
