--- a/planning.html
+++ b/planning.html
@@ -30,10 +30,10 @@
     </header>
 
     <main>
-        <div id="hero-image-outer">
-            <div id="hero-image-home"></div>
-            <div id="cover-headlines-outer">   
-                <div id="cover-headlines">
+        <div id="plan-hero-image-outer">
+            <div id="plan-hero-image-home"></div>
+            <div id="plan-cover-headlines-outer">   
+                <div id="plan-cover-headlines">
                     <h2>“Marketing is too important to be left to the marketing department.”~ David Packard</h2>
                 </div>
             </div>    
