add copy on tactics.html, create table, restyle list on planning.html

--- a/planning.html
+++ b/planning.html
@@ -42,12 +42,22 @@
     </main>
 
     <section>
-        <div id="text-container">
-            <h2>We combine traditional tactics and digital activity to create a marketing strategy to grow your business and increase your ROI.</h2>
+        <div id="plan-text-container">
+            <h2>Marketing Planning</h2>
             <br>
-            <p>We specialise in providing outsourced marketing solutions for SME organisations. We help you develop and implement a highly targeted marketing plan that is specifically created for your business.</p>
+            <p>By working with you to create a clear marketing strategy,  based on your business goals, we can ensure everything is aligned to the bigger picture.</p>
             <br>
-            <p>We ensure maximum return is achieved from your marketing expenditure. We measure and monitor all activity to ensure campaign targets and objectives are met.  We are passionate about growing your business with you!</p>
+            <p>Through the creation of a detailed marketing plan, we can ensure that your whole team understands:</p>
+            <div class="list-container">
+                <ul class="list">
+                <li>What is happening</li>
+                <li>When it is going to happen</li>
+                <li>Why it is happening</li>
+                <li>Who is doing it</li>
+                <li>What the outcome is</li>
+                </ul>
+            </div>
+            <p>Bringing all of these elements together, at the right time, in the right way is vital. We understand the importance of campaign management and integration, not just within the marketing plan but across the business, so that all involved are on message and fully engaged.</p>
         </div>
     </section>
 
