--- a/tactics.html
+++ b/tactics.html
@@ -42,12 +42,64 @@
     </main>
 
     <section>
-        <div id="text-container">
-            <h2>We combine traditional tactics and digital activity to create a marketing strategy to grow your business and increase your ROI.</h2>
+        <div id="plan-text-container">
+            <h2>Marketing Tactics</h2>
             <br>
-            <p>We specialise in providing outsourced marketing solutions for SME organisations. We help you develop and implement a highly targeted marketing plan that is specifically created for your business.</p>
+            <p>Whatever the tactics (traditional or digital), how they are managed, how they are integrated into the Marketing Plan and how they work with the strategy are the key differences on your ROI.  A thorough understanding of your business and goals will ensure the chosen marketing tactics will provide the desired outcome.</p>
             <br>
-            <p>We ensure maximum return is achieved from your marketing expenditure. We measure and monitor all activity to ensure campaign targets and objectives are met.  We are passionate about growing your business with you!</p>
+            <p>How do your customers consume information, how do they receive and integrate with your message, what makes them engage? We will select the most appropriate tactics, design and craft highly relevant messages and incorporate them into the marketing plan.</p>
+            <p>We will make sure the message and tactics are highly relevant, targeted and engaging. Bringing these elements together at the right time and in the right way is vital. It is what we do!</p>
+            <div class="plan-list-container">
+                <table>
+                    <tr>
+                      <th>Corporate</th>
+                      <th>Publications</th>
+                      <th>Events</th>
+                      <th>Digital</th>
+                      <th>Literature</th>
+                    </tr>
+                    <tr>
+                      <td>Branding</td>
+                      <td>Magazines</td>
+                      <td>Exhibitions</td>
+                      <td>Website</td>
+                      <td>Brochures</td>
+                    </tr>
+                    <tr>
+                      <td>ID & Logo</td>
+                      <td>Advertising</td>
+                      <td>Conferences</td>
+                      <td>Email Campaigns</td>
+                      <td>Price List</td>
+                    </tr>
+                    <tr>
+                      <td>Presentations</td>
+                      <td>Editorial</td>
+                      <td>Seminars</td>
+                      <td>SEO</td>
+                      <td>Graphics</td>
+                    </tr>
+                    <tr>
+                      <td>Signage</td>
+                      <td>Newsletters</td>
+                      <td>Demonstration Days</td>
+                      <td>PPC/CPC</td>
+                      <td>Leaflets</td>
+                    </tr>
+                    <td>Communications</td>
+                    <td>Handbooks</td>
+                    <td>Open Days</td>
+                    <td>Adwords</td>
+                    <td>Handouts</td>
+                  </tr>
+                  <td>Public Relations</td>
+                  <td>Instruction Manuals</td>
+                  <td>Roadshows</td>
+                  <td>Analytics</td>
+                  <td>Posters</td>
+                </tr>
+                  </table>
+            </div>
         </div>
     </section>
 
