restyle table on tactics.html and it is now a flex box not a table and update readme.md with code snippet details

--- a/tactics.html
+++ b/tactics.html
@@ -49,56 +49,56 @@
             <br>
             <p>How do your customers consume information, how do they receive and integrate with your message, what makes them engage? We will select the most appropriate tactics, design and craft highly relevant messages and incorporate them into the marketing plan.</p>
             <p>We will make sure the message and tactics are highly relevant, targeted and engaging. Bringing these elements together at the right time and in the right way is vital. It is what we do!</p>
-            <div class="plan-list-container">
-                <table>
-                    <tr>
-                      <th>Corporate</th>
-                      <th>Publications</th>
-                      <th>Events</th>
-                      <th>Digital</th>
-                      <th>Literature</th>
-                    </tr>
-                    <tr>
-                      <td>Branding</td>
-                      <td>Magazines</td>
-                      <td>Exhibitions</td>
-                      <td>Website</td>
-                      <td>Brochures</td>
-                    </tr>
-                    <tr>
-                      <td>ID & Logo</td>
-                      <td>Advertising</td>
-                      <td>Conferences</td>
-                      <td>Email Campaigns</td>
-                      <td>Price List</td>
-                    </tr>
-                    <tr>
-                      <td>Presentations</td>
-                      <td>Editorial</td>
-                      <td>Seminars</td>
-                      <td>SEO</td>
-                      <td>Graphics</td>
-                    </tr>
-                    <tr>
-                      <td>Signage</td>
-                      <td>Newsletters</td>
-                      <td>Demonstration Days</td>
-                      <td>PPC/CPC</td>
-                      <td>Leaflets</td>
-                    </tr>
-                    <td>Communications</td>
-                    <td>Handbooks</td>
-                    <td>Open Days</td>
-                    <td>Adwords</td>
-                    <td>Handouts</td>
-                  </tr>
-                  <td>Public Relations</td>
-                  <td>Instruction Manuals</td>
-                  <td>Roadshows</td>
-                  <td>Analytics</td>
-                  <td>Posters</td>
-                </tr>
-                  </table>
+    <div class="tactics-table-container">
+
+    <h2>Which tactics are right for my customers?</h2>
+
+<div class="tactics-table-5cols">
+
+  <div class="box Rtable-cell"><h3><strong>Corporate</strong></h3></div>
+  <div class="box Rtable-cell"><h3><strong>Publications</strong></h3></div>
+  <div class="box Rtable-cell"><h3><strong>Events</strong></h3></div>
+  <div class="box Rtable-cell"><h3><strong>Digital</strong></h3></div>
+  <div class="box Rtable-cell"><h3><strong>Literature</strong></h3></div>
+
+  <div class="box Rtable-cell">Branding</div>
+  <div class="box Rtable-cell">Magazines</div>
+  <div class="box Rtable-cell">Exhibitions</div>
+  <div class="box Rtable-cell">Website & Landing Pages</div>
+  <div class="box Rtable-cell">Brochures</div>
+
+  <div class="box Rtable-cell">ID & Logo</div>
+  <div class="box Rtable-cell">Advertising</div>
+  <div class="box Rtable-cell">Conferences</div>
+  <div class="box Rtable-cell">Email Campaigns</div>
+  <div class="box Rtable-cell">Price List</div>
+
+  <div class="box Rtable-cell">Presentations</div>
+  <div class="box Rtable-cell">Editorial</div>
+  <div class="box Rtable-cell">Seminars</div>
+  <div class="box Rtable-cell">SEO</div>
+  <div class="box Rtable-cell">Graphics</div>
+
+  <div class="box Rtable-cell">Signage</div>
+  <div class="box Rtable-cell">Newsletters</div>
+  <div class="box Rtable-cell">Demonstration Days</div>
+  <div class="box Rtable-cell">PPC/CPC</div>
+  <div class="box Rtable-cell">Leaflets</div>
+
+  <div class="box Rtable-cell">Communications</div>
+  <div class="box Rtable-cell">Handbooks</div>
+  <div class="box Rtable-cell">Open Days</div>
+  <div class="box Rtable-cell">Adwords</div>
+  <div class="box Rtable-cell">Handouts</div>
+
+  <div class="box Rtable-cell">Public Relations</div>
+  <div class="box Rtable-cell">Instruction Manuals</div>
+  <div class="box Rtable-cell">Roadshows</div>
+  <div class="box Rtable-cell">Analytics</div>
+  <div class="box Rtable-cell">Posters</strong></div>
+</div>
+
+
             </div>
         </div>
     </section>
