update some paragraph copy on planning.html

--- a/planning.html
+++ b/planning.html
@@ -45,7 +45,7 @@
         <div id="plan-text-container">
             <h2>Marketing Planning</h2>
             <br>
-            <p>By working with you to create a clear marketing strategy,  based on your business goals, we can ensure everything is aligned to the bigger picture.</p>
+            <p>By working with you to create a clear marketing strategy,  based on your business goals, we can ensure everything is aligned to the bigger picture.  Your company's value proposition, your brand messaging and your customer demographics are key to reaching prospective customers and turning them into paying customers.</p>
             <br>
             <p>Through the creation of a detailed marketing plan, we can ensure that your whole team understands:</p>
             <div class="list-container">
