condense headlines on each page into the same css rules

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </header>
 
     <main>
-        <div id="hero-image-outer">
+        <div class="hero-image-outer">
           <div id="hero-image-home"></div>
-            <div id="cover-headlines-outer">   
-                <div id="cover-headlines">
+            <div class="cover-headlines-outer">   
+                <div class="cover-headlines">
                     <h2>We are Rapier Marketing</h2>
                     <h2>Helping you grow your business</h2>
                 </div>
