--- a/planning.html
+++ b/planning.html
@@ -30,11 +30,11 @@
     </header>
 
     <main>
-        <div id="plan-hero-image-outer">
+        <div class="hero-image-outer">
             <div id="plan-hero-image-home"></div>
-            <div id="plan-cover-headlines-outer">   
-                <div id="plan-cover-headlines">
-                    <h2>“Marketing is too important to be left to the marketing department.”~ David Packard</h2>
+            <div class="cover-headlines-outer">   
+                <div class="cover-headlines">
+                    <h2 class="headlines-h2">“Marketing is too important to be left to the marketing department.”~ David Packard</h2>
                 </div>
             </div>    
         <!--Needs buttons to take you further down the homepage Past Projects and Testimonials-->
