--- a/tactics.html
+++ b/tactics.html
@@ -30,11 +30,11 @@
     </header>
 
     <main>
-        <div id="tactics-hero-image-outer">
+        <div class="hero-image-outer">
             <div id="tactics-hero-image-home"></div>
-            <div id="tactics-cover-headlines-outer">   
-                <div id="tactics-cover-headlines">
-                    <h2>“The aim of marketing is to know and understand the customer so well the product or service fits him and sells itself.” ~ Peter F. Drucker</h2>
+            <div class="cover-headlines-outer">   
+                <div class="cover-headlines">
+                    <h2 class="headlines-h2">“The aim of marketing is to know and understand the customer so well the product or service fits him and sells itself.” ~ Peter F. Drucker</h2>
                 </div>
             </div>    
         <!--Needs buttons to take you further down the homepage Past Projects and Testimonials-->
