fix vertical screen split on contact.html

--- a/tactics.html
+++ b/tactics.html
@@ -34,7 +34,7 @@
             <div id="tactics-hero-image-home"></div>
             <div class="cover-headlines-outer">   
                 <div class="cover-headlines">
-                    <h2 class="headlines-h2">“The aim of marketing is to know and understand the customer so well the product or service fits him and sells itself.” ~ Peter F. Drucker</h2>
+                    <h2 class="headlines-h2">“The aim of marketing is to know and understand the customer so well the product or service fits them and sells itself.” ~ Peter F. Drucker</h2>
                 </div>
             </div>    
         <!--Needs buttons to take you further down the homepage Past Projects and Testimonials-->
