remove unnecessary css rule on contact.html

--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,15 @@
 
     <main>
 
-        <div id="contact-page-outer">
-<!--Comment out
-        <section class="split">
--->            
-            <div class="split left-side">
+        <div id="contact-page-outer">         
+            <div class="contact-left-side">
                     <div id="form-title">
                         <h2>Let's Talk</h2>
                         <h4>clive@rapiergroup.co.uk</h4>
                     </div>
                 </div>
                
-              <div class="split right-side">
+              <div class="contact-right-side">
                     <div class="container">
                       <!--action borrowed from CI lessons-->
                         <form class="enquiry-form" action="https://formdump.codeinstitute.net/" method="POST">
