fix problems with duplicate id tags in testimonials section on index.html

--- a/index.html
+++ b/index.html
@@ -185,31 +185,31 @@
       </div>
 
       <div id="testimonials">
-        <div id="left-box">
-          <h3>David Snowden</h3>
-          <h4>Business Analyst</h4>
+        <div id="left-box-testimonial">
+            <h3>David Snowden</h3>
+            <h4>Business Analyst</h4>
 
-          <div id="circle-container">
-            <div id="circle-cover-bg-left"></div>
-          </div>
-            <p>Clive was one of our most knowledgeable people when delivering IT and technical services to exhibitors.  He is an intelligent and professional manager of both work and people with a thorough-going commercial instinct and skillset.  If you want to make money then Clive will be invaluable.</p>
+              <div class="circle-container">
+                <div id="circle-cover-bg-left"></div>
+              </div>
+                <p>Clive was one of our most knowledgeable people when delivering IT and technical services to exhibitors.  He is an intelligent and professional manager of both work and people with a thorough-going commercial instinct and skillset.  If you want to make money then Clive will be invaluable.</p>
         </div>
 
-        <div id="centre-box">
-          <h3>Lynne Greenfeather</h3>
-          <h4>Marketing Consultant</h4>
+        <div id="centre-box-testimonial">
+            <h3>Lynne Greenfeather</h3>
+            <h4>Marketing Consultant</h4>
 
-          <div id="circle-container">
-            <div id="circle-cover-bg-centre"></div>
-          </div>
-            <p>Clive is a consummate professional and very versed in the field of marketing communications. He is never short of new and creative ideas that produce solid results. It has been my pleasure working with Clive.</p>
+            <div class="circle-container">
+              <div id="circle-cover-bg-centre"></div>
+            </div>
+              <p>Clive is a consummate professional and very versed in the field of marketing communications. He is never short of new and creative ideas that produce solid results. It has been my pleasure working with Clive.</p>
         </div>
 
-        <div id="right-box">
+        <div id="right-box-testimonial">
           <h3>Jens Pfeiffer</h3>
           <h4>General Manager</h4>
                 
-          <div id="circle-container">
+          <div class="circle-container">
             <div id="circle-cover-bg-right"></div>
           </div>
             <p>Clive is a communications and marketing specialist with additional good skills in German language. He is methodical, dedicated to his work and a great supporter. The whole German team appreciated working with him.</p>
