fix stray end tag on tactics.html

--- a/tactics.html
+++ b/tactics.html
@@ -106,7 +106,7 @@
                 <div class="box Rtable-cell">Instruction Manuals</div>
                 <div class="box Rtable-cell">Roadshows</div>
                 <div class="box Rtable-cell">Analytics</div>
-                <div class="box Rtable-cell">Posters</strong></div>
+                <div class="box Rtable-cell">Posters</div>
             </div>
         </div>
     </section>
