change image in gallery for one of higher resolution

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                  
       <div class="responsive">
         <div class="gallery">
-          <a target="_blank" href="assets/images/egberttaylor_exhibition_1.jpeg">
-            <img src="assets/images/egberttaylor_exhibition_1.jpeg" alt="An exhibition booth for Egbert Taylor" width="600" height="400">
+          <a target="_blank" href="assets/images/egberttaylor_exhibition_2.jpeg">
+            <img src="assets/images/egberttaylor_exhibition_2.jpeg" alt="An exhibition booth for Egbert Taylor" width="600" height="400">
           </a>
           <div class="desc">Exhibition booth concept, delivery and management</div>
         </div>
@@ -118,8 +118,8 @@
               
       <div class="responsive">
         <div class="gallery">
-          <a target="_blank" href="assets/images/taylor_rvm_2016_3.jpg">
-            <img src="assets/images/taylor_rvm_2016_3.jpg" alt="A medium-sized exhibition booth for Egbert Taylor" width="600" height="400">
+          <a target="_blank" href="assets/images/egberttaylor_exhibition_1.jpeg">
+            <img src="assets/images/egberttaylor_exhibition_1.jpeg" alt="A medium-sized exhibition booth for Egbert Taylor" width="600" height="400">
           </a>
           <div class="desc">A digital render of an exhibition booth design</div>
         </div>
