make tactics-table into an actual table for improved accessibility

--- a/tactics.html
+++ b/tactics.html
@@ -64,50 +64,67 @@
         <div class="tactics-table-container">
             <h2>Which tactics are right for my customers?</h2>
 
-            <div class="tactics-table-5cols">
+            <table class="tactics-table-5cols">
+                <thead>
+                    <tr>
+                        <th class="box Rtable-cell"><h3><strong>Corporate</strong></h3></th>
+                        <th class="box Rtable-cell"><h3><strong>Publications</strong></h3></th>
+                        <th class="box Rtable-cell"><h3><strong>Events</strong></h3></th>
+                        <th class="box Rtable-cell"><h3><strong>Digital</strong></h3></th>
+                        <th class="box Rtable-cell"><h3><strong>Literature</strong></h3></th>
+                    </tr>
+                </thead>
 
-                <div class="box Rtable-cell"><h3><strong>Corporate</strong></h3></div>
-                <div class="box Rtable-cell"><h3><strong>Publications</strong></h3></div>
-                <div class="box Rtable-cell"><h3><strong>Events</strong></h3></div>
-                <div class="box Rtable-cell"><h3><strong>Digital</strong></h3></div>
-                <div class="box Rtable-cell"><h3><strong>Literature</strong></h3></div>
+                <tbody>
+                    <tr>
+                        <td class="box Rtable-cell">Branding</td>
+                        <td class="box Rtable-cell">Magazines</td>
+                        <td class="box Rtable-cell">Exhibitions</td>
+                        <td class="box Rtable-cell">Website & Landing Pages</td>
+                        <td class="box Rtable-cell">Brochures</td>
+                    </tr>
 
-                <div class="box Rtable-cell">Branding</div>
-                <div class="box Rtable-cell">Magazines</div>
-                <div class="box Rtable-cell">Exhibitions</div>
-                <div class="box Rtable-cell">Website & Landing Pages</div>
-                <div class="box Rtable-cell">Brochures</div>
+                    <tr>
+                        <td class="box Rtable-cell">ID & Logo</td>
+                        <td class="box Rtable-cell">Advertising</td>
+                        <td class="box Rtable-cell">Conferences</td>
+                        <td class="box Rtable-cell">Email Campaigns</td>
+                        <td class="box Rtable-cell">Price List</td>
+                    </tr>
 
-                <div class="box Rtable-cell">ID & Logo</div>
-                <div class="box Rtable-cell">Advertising</div>
-                <div class="box Rtable-cell">Conferences</div>
-                <div class="box Rtable-cell">Email Campaigns</div>
-                <div class="box Rtable-cell">Price List</div>
+                    <tr>
+                        <td class="box Rtable-cell">Presentations</td>
+                        <td class="box Rtable-cell">Editorial</td>
+                        <td class="box Rtable-cell">Seminars</td>
+                        <td class="box Rtable-cell">SEO</td>
+                        <td class="box Rtable-cell">Graphics</td>
+                    </tr>
 
-                <div class="box Rtable-cell">Presentations</div>
-                <div class="box Rtable-cell">Editorial</div>
-                <div class="box Rtable-cell">Seminars</div>
-                <div class="box Rtable-cell">SEO</div>
-                <div class="box Rtable-cell">Graphics</div>
+                    <tr>
+                        <td class="box Rtable-cell">Signage</td>
+                        <td class="box Rtable-cell">Newsletters</td>
+                        <td class="box Rtable-cell">Demonstration Days</td>
+                        <td class="box Rtable-cell">PPC/CPC</td>
+                        <td class="box Rtable-cell">Leaflets</td>
+                    </tr>
 
-                <div class="box Rtable-cell">Signage</div>
-                <div class="box Rtable-cell">Newsletters</div>
-                <div class="box Rtable-cell">Demonstration Days</div>
-                <div class="box Rtable-cell">PPC/CPC</div>
-                <div class="box Rtable-cell">Leaflets</div>
+                    <tr>
+                        <td class="box Rtable-cell">Communications</td>
+                        <td class="box Rtable-cell">Handbooks</td>
+                        <td class="box Rtable-cell">Open Days</td>
+                        <td class="box Rtable-cell">Adwords</td>
+                        <td class="box Rtable-cell">Handouts</td>
+                    </tr>
 
-                <div class="box Rtable-cell">Communications</div>
-                <div class="box Rtable-cell">Handbooks</div>
-                <div class="box Rtable-cell">Open Days</div>
-                <div class="box Rtable-cell">Adwords</div>
-                <div class="box Rtable-cell">Handouts</div>
-
-                <div class="box Rtable-cell">Public Relations</div>
-                <div class="box Rtable-cell">Instruction Manuals</div>
-                <div class="box Rtable-cell">Roadshows</div>
-                <div class="box Rtable-cell">Analytics</div>
-                <div class="box Rtable-cell">Posters</div>
-            </div>
+                    <tr>
+                        <td class="box Rtable-cell">Public Relations</td>
+                        <td class="box Rtable-cell">Instruction Manuals</td>
+                        <td class="box Rtable-cell">Roadshows</td>
+                        <td class="box Rtable-cell">Analytics</td>
+                        <td class="box Rtable-cell">Posters</td>
+                    </tr>
+                </tbody>
+            </table>    
         </div>
     </section>
 </main>    
