fixed font awesome icons in the footer on each page

--- a/tactics.html
+++ b/tactics.html
@@ -133,25 +133,26 @@
 
     <footer class="footer">
         
-        <div id="infobox-content-1">
+        <div class="infobox-content-1">
             <h3 class="title-left">Contact</h3>
         </div>
 
-        <div id="infobox-content-2">
+        <div class="infobox-content-2">
             <h3 class="title-right">Connect</h3>
         </div>
                 
-        <div id="social-media-icons">
+        <div class="social-media-icons">
             <a href="https://www.linkedin.com/company/rapier-group" target="_blank" rel="noopener" aria-label="Find us on Linkedin (opens in a new tab)"><i class="fab fa-linkedin"></i></a>
             <a href="https://twitter.com/RapierMarketing" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/Rapier-Marketing-102795364837812" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><i class="fab fa-facebook"></i></a>
         </div>
 
-        <div id="contact-info">
+        <div class="contact-info">
             <p>Call Clive Pearson on 07725 323393</p>
         </div>
 
     </footer>
-
+<!-- font awesome script -->
+<script src="https://kit.fontawesome.com/b3341ec0dd.js" crossorigin="anonymous"></script>
 </body>
 </html>
