add new class tactics-table-container because it was reusing an id from planning.html

--- a/planning.html
+++ b/planning.html
@@ -41,7 +41,7 @@
     </main>
 
     <section>
-        <div id="plan-text-container">
+        <div class="plan-text-container">
             <h2>Marketing Planning</h2>
             <br>
             <p>By working with you to create a clear marketing strategy,  based on your business goals, we can ensure everything is aligned to the bigger picture.  Your company's value proposition, your brand messaging and your customer demographics are key to reaching prospective customers and turning them into paying customers.</p>
