--- a/tactics.html
+++ b/tactics.html
@@ -48,7 +48,7 @@
  <!--Marketing Tactics introductory text section-->
 
     <section>
-        <div id="plan-text-container">
+        <div class="tactics-text-container">
             <h2>Marketing Tactics</h2>
             
             <p>Whatever the tactics (traditional or digital), how they are managed, how they are integrated into the Marketing Plan and how they work with the strategy are the key differences on your ROI.  A thorough understanding of your business and goals will ensure the chosen marketing tactics will provide the desired outcome.</p>
